ingress-controller/config/components/manager_dev_webhook/validating_webhook_configuration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: kong-controller-validations
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUYwekNDQTd1Z0F3SUJBZ0lVWU1qRXoyUEMxZmpKYjRORVRpTjFLc1lkTkZNd0RRWUpLb1pJaHZjTkFRRUwKQlFBd2VURUxNQWtHQTFVRUJoTUNWVk14RXpBUkJnTlZCQWdNQ2tOaGJHbG1iM0p1YVdFeEZqQVVCZ05WQkFjTQpEVk5oYmlCR2NtRnVZMmx6WTI4eERUQUxCZ05WQkFvTUJFdHZibWN4R0RBV0JnTlZCQXNNRDB0dmJtZGZTM1ZpClpYSnVaWFJsY3pFVU1CSUdBMVVFQXd3TFkyRXVhMjl1Wnk1d2IyUXdIaGNOTWpRd05qQTBNVE13TURJNVdoY04KTXpRd05qQXlNVE13TURJNVdqQjVNUXN3Q1FZRFZRUUdFd0pWVXpFVE1CRUdBMVVFQ0F3S1EyRnNhV1p2Y201cApZVEVXTUJRR0ExVU [...]
    service:
      name: kong-validation-webhook
      namespace: kong
      port: 443
  # NOTE: By default Kong's helm charts use Ignore for the failurePolicy
  # e.g. https://github.com/Kong/charts/blob/fd9deb6ee34d9b9ac4ab4be2188d4564d0b655e5/charts/kong/values.yaml#L586
  # but setting this to Fail here allows devs to see the errors sooner, during development.
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: validations.kong.konghq.com
  rules:
  - apiGroups:
    - configuration.konghq.com
    apiVersions:
    - '*'
    operations:
    - CREATE
    - UPDATE
    resources:
    - kongconsumers
    - kongconsumergroups
    - kongplugins
    - kongclusterplugins
    - kongvaults
    scope: '*'
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - secrets
    - services
    scope: '*'
  - apiGroups:
    - networking.k8s.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - ingresses
    scope: '*'
  - apiGroups:
    - gateway.networking.k8s.io
    apiVersions:
    - v1alpha2
    - v1beta1
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - gateways
    - httproutes
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
